--- a/package.json
+++ b/package.json
@@ -6,18 +6,40 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.6.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "tailwind-merge": "^2.5.2",
+    "typescript": "~5.3.3",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "node-notifier": "^10.0.1",
+    "prettier": "^3.3.3",
+    "react-native-svg-transformer": "^1.5.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
